# netman-reborn

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  RESEARCH.md  build.rs
scripts/: screenshot.ps1  ws-probe.ps1
src/: lib.rs  main.rs
src/capture/: mod.rs
src/model/: mod.rs  packet.rs  tables.rs
src/resolve/: dns.rs  mod.rs  oui.rs
src/server/: mod.rs
src/wsproto/: mod.rs
static/: app.js  index.html  style.css  test.html
tests/: replay.rs
tests/fixtures/: sample.pcap
