[package]
name = "netman"
version = "0.1.0"
edition = "2021"
description = "Netman Reborn — Etherman (L2) + Interman (L3) passive network monitor"
license = "MIT"

[dependencies]
pcap = "2.4.0"
clap = { version = "4.6.3", features = ["derive"] }
ctrlc = "3.5"
anyhow = "1"
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_LibraryLoader"] }

[profile.release]
lto = "thin"
