[package]
name = "netman"
version = "0.1.0"
edition = "2021"
description = "Netman Reborn — Etherman (L2) + Interman (L3) passive network monitor"
license = "MIT"

[dependencies]
pcap = "2.4.0"
etherparse = "0.20.3"
clap = { version = "4.6.3", features = ["derive"] }
tokio = { version = "1.53.0", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "signal",
    "macros",
] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["fs"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_LibraryLoader"] }

[profile.release]
lto = "thin"
